更换ds服务商为腾讯云；在ai优化环节传入了商品类目

--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>批量替换输入框文本</title>
+  <title>上货助手</title>
   <style>
     body {
       width: 250px;
@@ -70,9 +70,9 @@
 </head>
 <body>
   <div class="container">
-    <h2>批量替换输入框文本</h2>
+    <h2>上货助手</h2>
     
-    <p class="description">注入页面后，将在当前页面显示常驻操作面板，用于批量查找和替换输入框文本</p>
+    <p class="description">注入页面后，将在当前页面显示常驻操作面板，用于优化商品标题、sku等信息</p>
     
     <button id="injectBtn" class="button inject-button">注入面板到页面</button>
     <button id="closeBtn" class="button close-button">关闭页面面板</button>
